# anagram_derivation

./: .gitignore  CMakeLists.txt  README.md  algorithm.cpp  crawler.py  main.cpp  test.cpp
dictionaries/: crawled  sample_dict
